--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,6 @@
 	"ownerid": "199570626724233216",
 	"modrolename": "Mod",
 	"adminrolename": "Admin",
-	"prefix": "~",
+	"prefix": ">",
 	"token": "MzI0MDYyMDk0MjYzODQ0ODY0.DCEN3A.Ux7sEfd0yo9CHxjkVD1cMqoRFRk"
 }
