--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,5 @@
 	"modrolename": "Mod",
 	"adminrolename": "Admin",
 	"prefix": ">",
-	"token": "MzI0MDYyMDk0MjYzODQ0ODY0.DCEN3A.Ux7sEfd0yo9CHxjkVD1cMqoRFRk"
+	"token": "MzI0NTM5OTQ1Mzg3ODE5MDA4.DCLLjw.WeKTQXJI7l8AqAB5qOV21-0XQUo"
 }
